[package]
name = "ascii_table_rs"
version = "1.0.0"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+AsciiTablersgithub@gmail.com>"]
description = "Elegant ASCII table renderer for Rust CLI and terminal apps"
repository = "https://github.com/yourname/ascii-table-rs"
homepage = "https://github.com/yourname/ascii-table-rs"
license = "MIT"
keywords = ["ASCII", "table", "terminal", "data", "cli"]

[lib]
name = "ascii_table_rs"
path = "src/lib.rs"

[dependencies]
unicode-width = "0.1"

